--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "gimli"
 version = "0.31.0"
-categories = ["development-tools::debugging", "development-tools::profiling", "parser-implementations"]
+categories = [
+    "development-tools::debugging",
+    "development-tools::profiling",
+    "parser-implementations",
+]
 description = "A library for reading and writing the DWARF debugging format."
 documentation = "https://docs.rs/gimli"
 edition = "2018"
@@ -29,6 +33,7 @@ stable_deref_trait = { version = "1.1.0", default-features = false, optional = t
 core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
 alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
 compiler_builtins = { version = "0.1.2", optional = true }
+portable-atomic-util = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
 test-assembler = "0.1.3"
@@ -42,6 +47,7 @@ fallible-iterator = ["dep:fallible-iterator"]
 write = ["dep:indexmap"]
 std = ["fallible-iterator?/std", "stable_deref_trait?/std"]
 default = ["read-all", "write"]
+portable-atomic = ["portable-atomic-util"]
 
 # Internal feature, only used when building as part of libstd, not part of the
 # stable interface of this crate.
